--- a/index.html
+++ b/index.html
@@ -14,8 +14,19 @@
         body {
 		background-color: black;
 	     }
+	h1 {
+		color: #cdcdcd;
+	    }
+	div {
+     		height: 400px;
+     		width: 800px;
+     		background: red;
+     		line-height: 400px;
+     		text-align: center;
+}
     </style>
 </head>
 <body>
+	<div><h1>Redirecting...</h1></div>
 </body>
 </html>
