--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
 	div {
      		height: 400px;
      		width: 800px;
-     		background: red;
+     		background: black;
      		line-height: 400px;
      		text-align: center;
-}
+	    }
     </style>
 </head>
 <body>
