--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Redirecting...</title>
-    <meta http-equiv="refresh" content="5; url=https://torch.studio/" />
+    <meta http-equiv="refresh" content="2; url=https://torch.studio/" />
     <meta name="description" content="the torch studio" />
     <meta property="og:site_name" content="the torch studio" />
     <meta property="og:title" content="the torch studio" />
@@ -14,19 +14,40 @@
         body {
 		background-color: black;
 	     }
-	h1 {
-		color: #cdcdcd;
-	    }
-	div {
-     		height: 400px;
-     		width: 800px;
-     		background: black;
-     		line-height: 400px;
-     		text-align: center;
-	    }
+	#torch {
+		overflow: hidden;
+ 		background-image: url("https://assets.torch.studio/torchstudio/torch-lit-r.png");
+ 		content: url("https://assets.torch.studio/torchstudio/torch-r.png");
+ 		height: 75px;
+ 		width: 75px;
+ 		border-radius: 15px;
+ 		display: block;
+ 		margin-left: auto;
+ 		margin-right: auto;
+ 	       }
+
+ 	#torch:hover {
+ 		content: url("https://assets.torch.studio/torchstudio/torch-lit-r.png");
+ 		height: 75px;
+ 		width: 75px;
+ 		border-radius: 15px;
+ 		display: block;
+ 		margin-left: auto;
+ 		margin-right: auto;
+ 	       }
+
+ 	#torch:active {
+ 		content: url("https://assets.torch.studio/torchstudio/torch-lit-r.png");
+ 		height: 75px;
+ 		width: 75px;
+ 		border-radius: 15px;
+ 		display: block;
+ 		margin-left: auto;
+ 		margin-right: auto;
+ 	       }
     </style>
 </head>
 <body>
-	<div><h1>Redirecting...</h1></div>
+	<div id="torch"/ style="cursor: pointer;" onclick="window.location='https://the.torch.studio/#home';"/>
 </body>
 </html>
