--- a/index.html
+++ b/index.html
@@ -18,19 +18,20 @@
 		overflow: hidden;
  		background-image: url("https://assets.torch.studio/torchstudio/torch-lit-r.png");
  		content: url("https://assets.torch.studio/torchstudio/torch-r.png");
- 		height: 75px;
- 		width: 75px;
- 		border-radius: 15px;
+ 		height: 250px;
+ 		width: 250px;
+ 		border-radius: 50px;
  		display: block;
  		margin-left: auto;
  		margin-right: auto;
+		top: 40%;
  	       }
 
  	#torch:hover {
  		content: url("https://assets.torch.studio/torchstudio/torch-lit-r.png");
- 		height: 75px;
- 		width: 75px;
- 		border-radius: 15px;
+ 		height: 250px;
+ 		width: 250px;
+ 		border-radius: 50px;
  		display: block;
  		margin-left: auto;
  		margin-right: auto;
@@ -38,9 +39,9 @@
 
  	#torch:active {
  		content: url("https://assets.torch.studio/torchstudio/torch-lit-r.png");
- 		height: 75px;
- 		width: 75px;
- 		border-radius: 15px;
+ 		height: 250px;
+ 		width: 250px;
+ 		border-radius: 50px;
  		display: block;
  		margin-left: auto;
  		margin-right: auto;
