--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 		background-color: black;
 	     }
 	#torch {
+		position: absolute;
 		overflow: hidden;
  		background-image: url("https://assets.torch.studio/torchstudio/torch-lit-r.png");
  		content: url("https://assets.torch.studio/torchstudio/torch-r.png");
