--- a/index.html
+++ b/index.html
@@ -51,6 +51,6 @@
     </style>
 </head>
 <body>
-	<div id="torch"/ style="cursor: pointer;" onclick="window.location='https://the.torch.studio/#home';"/>
+	<div id="container"><div id="torch"/ style="cursor: pointer;" onclick="window.location='https://the.torch.studio/#home';"/></div>
 </body>
 </html>
