--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <style>
         body {
 		background-color: black;
-	     }
+	       }
 	#torch {
 		position: absolute;
 		overflow: hidden;
@@ -48,6 +48,11 @@
  		margin-left: auto;
  		margin-right: auto;
  	       }
+	    
+	#container {
+	     	display: flex;
+  		justify-content: center;
+	       }
     </style>
 </head>
 <body>
