--- a/Privacy.html
+++ b/Privacy.html
@@ -11,6 +11,11 @@
 	<meta property="og:description" content="the torch studio" />
 	<link href="https://fonts.googleapis.com/css?family=Josefin+Sans:400,400italic,300,300italic" rel="stylesheet" type="text/css" />
 	<link rel="icon" type="image/png" href="https://assets.torch.studio/torchstudio/torch-lit-r.png" />
+	<style>
+	    * {
+	   	filter: invert(100%);
+	      }
+	</style>
 </head>
 <body>
 <h1>Privacy Policy</h1>
