--- a/Privacy.html
+++ b/Privacy.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     	<meta charset="UTF-8">
-    	<title>Privacy Policy</title>
+    	<title>Privacy Policy | The Torch Studio</title>
     	<meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no" />
 	<meta name="description" content="the torch studio" />
 	<meta property="og:site_name" content="the torch studio" />
