--- a/Terms.html
+++ b/Terms.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Terms of Use</title>
+    <title>Terms of Use | The Torch Studio</title>
     <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no" />
 	<meta name="description" content="the torch studio" />
 	<meta property="og:site_name" content="the torch studio" />
