--- a/Terms.html
+++ b/Terms.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <title>Terms of Use | The Torch Studio</title>
     <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no" />
-	<meta name="description" content="the torch studio" />
-	<meta property="og:site_name" content="the torch studio" />
-	<meta property="og:title" content="the torch studio" />
+	<meta name="description" content="Terms of Use | The Torch Studio" />
+	<meta property="og:site_name" content="Terms of Use | The Torch Studio" />
+	<meta property="og:title" content="Terms of Use | The Torch Studio" />
 	<meta property="og:type" content="website" />
-	<meta property="og:description" content="the torch studio" />
+	<meta property="og:description" content="Terms of Use | The Torch Studio" />
 	<link href="https://fonts.googleapis.com/css?family=Josefin+Sans:400,400italic,300,300italic" rel="stylesheet" type="text/css" />
 	<link rel="icon" type="image/png" href="https://assets.torch.studio/torchstudio/torch-lit-r.png" />
 	<style>
